--- a/Journal/app/states/main/views/recently-used.html
+++ b/Journal/app/states/main/views/recently-used.html
@@ -11,7 +11,7 @@
         </md-autocomplete>
         <div flex></div>
         <md-menu md-offset="0 42">
-            <md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
+            <md-button class="md-icon-button" ng-click="$mdMenu.open($event)">
                 <md-icon md-font-icon="zmdi zmdi-more-vert"></md-icon>
             </md-button>
             <md-menu-content width="4">
